--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "feather-icons": "^4.29.0",
         "izitoast": "^1.4.0",
         "toastr": "^2.1.4"
     }
